--- a/src/assets/css/allformation.scss
+++ b/src/assets/css/allformation.scss
@@ -19,10 +19,11 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f5f5f7;
+$light2: #e0e7f2;
 $dark: #343a40;
 $transparent: #00000000;
-$mysyscolor1: #3158cd;
-$mysyscolor2: #188eee;
+$mysyscolor1: #188eee;
+$mysyscolor2: #3158cd;
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
 
@@ -51,9 +52,9 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
             box-shadow: 0px 5px 10px 3px #80808030;
     transform: scale(1.05);
     opacity: 1;
-    .sub-card {
-      opacity: 1;
-    }
+    // .sub-card {
+    //   opacity: 1;
+    // }
   }
 }
 .t-card .t-card-header {
@@ -132,16 +133,13 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
 }
 // ***************************
 
-
 .main-title .subselect {
+  display: inline-block;
   position: relative;
+  width: 100%;
   font-size: 16px;
-  color: $graydark;
-}
-.main-title .subselect {
-  display: flex;
-  flex-flow: column wrap;
-  height: fit-content;
+  color: $mysyscolor1;
+  font-weight: 700;
   background-color: $transparent !important;
   border-color: $transparent !important; outline-color: $transparent !important;
   transition: all .3s ease-in-out;
@@ -155,12 +153,9 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
           box-shadow: 7px 7px 5px -4px rgba(194, 194, 194, 0.2);
 }
 .main-title .subelement {
-  position: sticky;
+  // position: sticky;
   display: none;
 }
-// .main-title .subelement:first-child {
-//   display: inline-block !important;
-// }
 .main-title .subelement:first-child::after {
   content: '▼';
   color: $mysyscolor1;
