--- a/src/assets/css/loading.scss
+++ b/src/assets/css/loading.scss
@@ -4,13 +4,31 @@
 	justify-content: center;
 	padding: 10rem
 }
+.loading_md {
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	padding: 5rem
+}
+.loading_sm {
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	padding: 3rem
+}
+.loading_xs {
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	padding: 1rem
+}
 .loading2 {
 	display: flex;
     align-items: center;
 	justify-content: center;
 }
 
-.loading-img {
+.loading_img {
 	display: inherit;
   max-width: 5rem;
   background-color: transparent;
