--- a/src/assets/css/service.scss
+++ b/src/assets/css/service.scss
@@ -38,7 +38,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
 }
 .service-img {
   position: relative;
-  height: 25rem;
+  height: 100%; width: 100%;
   object-fit: cover;
   border-radius: .2rem;
 }
