--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -174,7 +174,7 @@ span { padding: .1rem; margin: .1rem; }
 .main-title {
   display: block;
   padding: .5rem .5rem 1rem 1rem !important;
-  margin: 1rem 0 !important;
+  margin: 2rem 0rem 1.5rem 0rem !important;
   font-weight: 700;
   border-left: .7rem solid $mysyscolor1;
   border-radius: .5rem 0 0 0;
@@ -218,10 +218,11 @@ span { padding: .1rem; margin: .1rem; }
   color: $mysyscolor2;
 }
 .subtitle {
+  display: inline-block;
   border-left: .5rem solid $mysyscolor2;
   padding: .2rem 1.5rem;
   white-space: nowrap;
-  width: .5rem;
+  min-width: 3rem;
   background-color: $mysyscolor1; color:$white
 }
 
@@ -235,9 +236,9 @@ span { padding: .1rem; margin: .1rem; }
 }
 
 .font-s1 { font-size: 8px !important; } .font-s2 { font-size: 10px !important; } .font-s3 { font-size: 12px !important; }
-.font-s4 { font-size: 13px !important; } .font-s5 { font-size: 14px !important; } .font-s6 { font-size: 15px !important; }
-.font-s7 { font-size: 16px !important; } .font-s8 { font-size: 18px !important; } .font-s9 { font-size: 20px !important; }
-.font-s10 { font-size: 22px !important; } .font-s11 { font-size: 26px !important; } .font-s12 { font-size: 32px !important; }
+.font-s4 { font-size: 16px !important; } .font-s5 { font-size: 18px !important; } .font-s6 { font-size: 22px !important; }
+.font-s7 { font-size: 26px !important; } .font-s8 { font-size: 30px !important; } .font-s9 { font-size: 36px !important; }
+.font-s10 { font-size: 42px !important; } .font-s11 { font-size: 48px !important; } .font-s12 { font-size: 54px !important; }
 
 
 .slick-dots {
