--- a/src/assets/css/allformation.scss
+++ b/src/assets/css/allformation.scss
@@ -20,7 +20,7 @@ $warning: #ffc107;
 $danger: #dc3545;
 $light: #f5f5f7;
 $light2: #e0e7f2;
-$dark: #343a40;
+$dark: #1f2123;
 $transparent: #00000000;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
