--- a/src/assets/css/detailformation.scss
+++ b/src/assets/css/detailformation.scss
@@ -11,7 +11,7 @@ $teal: #20c997;
 $cyan: #17a2b8;
 $white: #fff;
 $gray: #6c757d;
-$graydark: #3e4752;
+$graydark: #444444;
 $primary: #007bff;
 $secondary: #6c757d;
 $success: #28a745;
@@ -19,7 +19,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f5f5f7;
-$dark: #343a40;
+$dark: #1f2123;
 $transparent: #00000000;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
@@ -29,6 +29,20 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
 #detailFormation{
   z-index: 1 !important;;
 }
+#formaBanner {
+  box-shadow: 0rem 0rem 1rem 0rem $graydark;
+}
+#formationSimilaire .line {
+  display: block;
+  text-align: center;
+}
+#formationSimilaire hr {
+  display: inline-block;
+  border: .1rem solid $mysyscolor1;
+  background-color: $mysyscolor1; color: $mysyscolor1;
+  min-width: 10rem;
+}
+
 .formation-section {
   // display: flex;
   // flex-wrap: nowrap;
@@ -53,16 +67,15 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   display: flex; 
   flex-flow: row wrap;
   align-items: flex-start;
-  margin: 2rem 0; padding: 0;
-  min-width: 20rem;
-  max-width: 25rem;
+  margin: 2rem 0rem; padding: 0;
+  min-width: 20rem; max-width: 25rem;
   min-height: 20rem;
   background-color: $light !important; color: $dark;
   border-radius: .2rem !important;
   -webkit-box-shadow: 0px 4px 20px -5px rgba(0,0,0,.4);
   -moz-box-shadow: 0px 4px 20px -5px rgba(0,0,0,.4);
   box-shadow: 0px 4px 20px -5px rgba(0,0,0,.4);
-  z-index: 2;
+  z-index: 10;
 }
 .d-card .d-card-header {
   position: relative;
@@ -89,6 +102,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   }
   .d-card {
     position: relative;
+    min-width: 15rem; max-width: 30rem;
   }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
@@ -97,6 +111,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   }
   .d-card {
     position: relative;
+    min-width: 20rem; max-width: 20rem;
   }
 }
 @media only screen and (min-width: 769px) and (max-width: 992px) {
@@ -105,8 +120,12 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   }
   .d-card {
     position: relative;
+    min-width: 20rem; max-width: 20rem;
   }
 }
-@media only screen and (min-width: 923px) and (max-width: 1024px) {
-  
+@media only screen and (min-width: 993px) and (max-width: 1024px) {
+  .d-card {
+    position: relative;
+    min-width: 20rem; max-width: 20rem;
+  }
 }
