--- a/src/assets/css/domaine.scss
+++ b/src/assets/css/domaine.scss
@@ -19,7 +19,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f5f5f7;
-$dark: #343a40;
+$dark: #1f2123;
 $transparent: #00000000;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
@@ -102,7 +102,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   position: absolute;
   display: block !important;
   width: 100%;
-  padding: .3rem 0;
+  padding: .3rem 1rem;
   font-weight: 700;
   font-size: 2rem !important;
   color: $white;
