--- a/src/assets/css/expertise.scss
+++ b/src/assets/css/expertise.scss
@@ -19,7 +19,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f8f8ff;
-$dark: #343a40;
+$dark: #1f2123;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
