--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -19,7 +19,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f5f5f7;
-$dark: #343a40;
+$dark: #1f2123;
 $transparent: #00000000;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
@@ -28,7 +28,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
 
 
 .footer {
-  background-color: #1c1c1c; color: $light;
+  background-color: $dark; color: $light;
   z-index: 1;
 }
 .footer-title {
