--- a/src/assets/css/loading.scss
+++ b/src/assets/css/loading.scss
@@ -1,36 +1,27 @@
 .loading {
 	display: flex;
-    align-items: center;
+	align-items: center;
 	justify-content: center;
 	padding: 10rem
 }
 .loading_md {
-	display: flex;
-    align-items: center;
-	justify-content: center;
 	padding: 5rem
 }
 .loading_sm {
-	display: flex;
-    align-items: center;
-	justify-content: center;
 	padding: 3rem
 }
 .loading_xs {
-	display: flex;
-    align-items: center;
-	justify-content: center;
 	padding: 1rem
 }
 .loading2 {
 	display: flex;
-    align-items: center;
+	align-items: center;
 	justify-content: center;
 }
 
 .loading_img {
 	display: inherit;
-  max-width: 5rem;
+  min-width: 3rem; max-width: 5rem;
   background-color: transparent;
 	// -webkit-animation: loadingAnim 0.5s ease-in-out infinite;
 	// animation: loadingAnim .5s ease-in-out infinite;
