--- a/src/assets/css/partenaire.scss
+++ b/src/assets/css/partenaire.scss
@@ -19,7 +19,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f8f8ff;
-$dark: #343a40;
+$dark: #1f2123;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
@@ -33,7 +33,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   justify-content: center;
   background-color: #ffffff !important;
   max-height: 17rem;
-  // box-shadow: 1px 1px 5px 2px #343a4015;
+  // box-shadow: 1px 1px 5px 2px #1f212315;
   transition: .2s all ease-in-out;
   box-shadow: 0px 13px 20px 0px #dceaff0f;
 }
@@ -52,7 +52,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   // filter: grayscale(100%);
 }
 .p-card:hover {
-  box-shadow: 0px 13px 20px 0px #343a400f;
+  box-shadow: 0px 13px 20px 0px #1f21230f;
 }
 
 
