--- a/src/assets/css/service.scss
+++ b/src/assets/css/service.scss
@@ -21,7 +21,7 @@ $info: #17a2b8;
 $warning: #ffc107;
 $danger: #dc3545;
 $light: #f8f8ff;
-$dark: #343a40;
+$dark: #1f2123;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
@@ -36,7 +36,7 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
   color: $light;
   height: 35rem;
 }
-.service-img {
+.service .service-img {
   position: relative;
   height: 100%; width: 100%;
   object-fit: cover;
@@ -46,15 +46,36 @@ $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .s-card { flex: 1 0 100% !important; }
-  .service-img { display: none !important; }
+  .service {
+    flex-wrap: wrap-reverse;
+    align-self: center;
+  }
+  .service .service-img {
+    display: inline-flex;
+    height: 100%; width: 100%;
+  }
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   .s-card { flex: 1 0 33.33% !important; }
-  .service-img { display: none !important; }
+  .service {
+    flex-wrap: wrap-reverse;
+    align-self: center;
+  }
+  .service .service-img {
+    display: inline-flex;
+    height: 100%; width: 100%;
+  }
 }
 @media only screen and (min-width: 769px) and (max-width: 992px) {
   .s-card { flex: 1 0 20% !important; }
-  .service-img { display: none !important; }
+  .service {
+    flex-wrap: wrap-reverse;
+    align-self: center;
+  }
+  .service .service-img {
+    display: inline-flex;
+    height: 100%; width: 100%;
+  }
 }
 @media only screen and (min-width: 923px) and (max-width: 1024px) {
   .s-card { flex: 1 0 25% !important; }
