--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -22,7 +22,7 @@ $warning: #ffc107;
 $danger: #dc3545;
 $light: #f8f8ff;
 $light2: #e0e7f2;
-$dark: #495158;
+$dark: #1f2123;
 $mysyscolor1: #188eee;
 $mysyscolor2: #3158cd;
 $gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
@@ -114,9 +114,17 @@ input[type=text]:focus, input[type=url]:focus, input[type=email]:focus, input[ty
 //   transition: .3s all ease-in-out;
 //   border: none !important;
 // }
-btn-primary {
+.btn-primary {
   background-color: $mysyscolor1 !important;
   color: $light !important;
+}
+.btn-outline-primary {
+  border-color: $mysyscolor1;
+  color: $mysyscolor1;
+}
+.btn-outline-primary:hover {
+  color: $light;
+  background-color: $mysyscolor1;
 }
 [class*=col-]{padding-right:0;padding-left:0}
 a { text-decoration: none !important; color: initial; }
@@ -141,7 +149,7 @@ span { padding: .1rem; margin: .1rem; }
   padding: 1rem .5rem !important;
 }
 .navbar-nav .nav-link.active, .router-link-active {
-  box-shadow: 0px 2px 0px 0px $mysyscolor1;
+  box-shadow: 0px 3px 0px 0px $mysyscolor1;
 }
 .nav-tabs .nav-link.active {
   box-shadow: 0px 3px 0px 0px $mysyscolor1;
@@ -189,6 +197,14 @@ span { padding: .1rem; margin: .1rem; }
 .bg_light_2 {
   background-color: $light2;
   color: $dark;
+}
+.bg_dark {
+  background-color: $dark;
+  color: $white;
+}
+.bg-primary {
+  background-color: $mysyscolor1 !important;
+  color: $white !important;
 }
 
 .bg_gradient {
@@ -265,7 +281,7 @@ span { padding: .1rem; margin: .1rem; }
   position: fixed;
   bottom: 0; right: 0;
   padding: .7rem;
-  margin: 2rem;
+  margin: 0rem 1rem 3.5rem 2rem;
   background-color: $mysyscolor1;
   color: $white;
   border-radius: 50rem;
