--- a/src/assets/css/chiffre.scss
+++ b/src/assets/css/chiffre.scss
@@ -1,29 +1,4 @@
-$blue: #46b3e6;
-$lightblue: #dff6f0;
-$indigo: #6610f2;
-$purple: #6f42c1;
-$pink: #e83e8c;
-$red: #dc3545;
-$orange: #fd7e14;
-$yellow: #ffc107;
-$green: #28a745;
-$teal: #20c997;
-$cyan: #17a2b8;
-$white: #fff;
-$gray: #6c757d;
-$graydark: #495158;
-$primary: #007bff;
-$secondary: #6c757d;
-$success: #28a745;
-$info: #17a2b8;
-$warning: #ffc107;
-$danger: #dc3545;
-$light: #f8f8ff;
-$dark: #1f2123;
-$mysyscolor1: #188eee;
-$mysyscolor2: #3158cd;
-$gradient: linear-gradient(174deg, rgba(0,0,0,1) 0%, rgba(24,142,238,1) 0%, rgba(49,88,205,1) 100%);
-
+@import 'variables';
 
 .chiffre {
   display: flex;
