--- a/src/assets/css/detailformation.scss
+++ b/src/assets/css/detailformation.scss
@@ -3,8 +3,14 @@
 #detailFormation{
   z-index: 1 !important;;
 }
+#formationCard {
+  transition: .5s all ease-in-out;
+}
 #formaBanner {
   box-shadow: 0rem 0rem 1rem 0rem $graydark;
+}
+#formationSimilaire {
+  transition: .5s all ease-in-out;
 }
 .line {
   display: block;
