--- a/src/assets/css/loading.scss
+++ b/src/assets/css/loading.scss
@@ -13,18 +13,16 @@
 .loading_xs {
 	padding: 1rem
 }
-.loading2 {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
 
 .loading_img {
 	display: inherit;
-  min-width: 3rem; max-width: 5rem;
+  min-width: 5rem; max-width: 10rem;
   background-color: transparent;
 	// -webkit-animation: loadingAnim 0.5s ease-in-out infinite;
 	// animation: loadingAnim .5s ease-in-out infinite;
+}
+.loading_img_sm {
+  min-width: 3rem; max-width: 5rem;
 }
 
 // @-webkit-keyframes loadingAnim {
