--- a/src/assets/css/detailformation.scss
+++ b/src/assets/css/detailformation.scss
@@ -8,6 +8,7 @@
 }
 #formaBanner {
   box-shadow: 0rem 0rem 1rem 0rem $graydark;
+  z-index: 6;
 }
 #formationSimilaire {
   transition: .5s all ease-in-out;
