--- a/src/assets/css/_style.scss
+++ b/src/assets/css/_style.scss
@@ -13,6 +13,13 @@
   font-family: 'Poppins', sans-serif;
   font-size: 15px;
 }
+@font-face {
+  font-family: 'Pacifico';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Pacifico Regular'), local('Pacifico-Regular'), url(https://fonts.gstatic.com/s/pacifico/v12/FwZY7-Qmy14u9lezJ-6H6MmBp0u-.woff2) format('woff2');
+  font-display: swap;
+}
 body {
   background-color: $light !important;
   color: $graydark !important;
